[tool.poetry]
name = "flighaware"
version = "0.1.0"
description = ""
authors = ["schrutebeet <ricardosans98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.48.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
